package.json: changed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stackbit-podcaster-theme",
-  "description": "Stackbit Podcaster Theme",
+  "description": "building-series",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
