package.json: changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stackbit-podcaster-theme",
+  "name": "building-series",
   "description": "building-series",
   "version": "0.0.1",
   "license": "MIT",
